docs: add documentation for Show Openings
